--- a/gpt2_haut_niveau.ipynb
+++ b/gpt2_haut_niveau.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "[comment]: <> \"LTeX: language=fr\"\n",
-    "# <center> Formation IXXI - Grands modèles de langue </center>\n",
+    "# <center> Formation IXXI - Grands modèles de langage </center>\n",
     "## <center> Jean-Philippe Magué </center>\n",
     "\n",
     "<div align=\"center\">\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x14c33c390>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x178f0f750>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "device(type='mps', index=0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -149,25 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'Artificial intelligence'"
+    "prompt = 'Artificial intelligence'\n",
+    "prompt = 'ArtificCial intElliGence'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input_ids': tensor([[8001, 9542, 4430]], device='mps:0'), 'attention_mask': tensor([[1, 1, 1]], device='mps:0')}"
+       "{'input_ids': tensor([[ 8001,   811,    34,   498,   493,    36, 15516,    38,   594]],\n",
+       "       device='mps:0'), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1]], device='mps:0')}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +193,14 @@
       "|token|  -> id\n",
       "\n",
       "|Art|    -> 8001\n",
-      "|ificial| -> 9542\n",
-      "| intelligence| -> 4430\n"
+      "|ific|   -> 811\n",
+      "|C|      -> 34\n",
+      "|ial|    -> 498\n",
+      "| int|   -> 493\n",
+      "|E|      -> 36\n",
+      "|lli|    -> 15516\n",
+      "|G|      -> 38\n",
+      "|ence|   -> 594\n"
      ]
     }
    ],
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +256,7 @@
        "tensor([[8001, 9542, 4430,  318]], device='mps:0')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +315,7 @@
        "'Artificial intelligence is a'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +336,7 @@
        "'Artificial intelligence is a new'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +357,7 @@
        "'Artificial intelligence is a new field'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +385,7 @@
        "'Artificial intelligence is a new field of research'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,17 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ -99.0574,  -97.3374, -104.6698,  ..., -105.8733, -106.3210,\n",
+       "(tensor([[ -99.0574,  -97.3374, -104.6698,  ..., -105.8733, -106.3209,\n",
        "           -99.8503]], device='mps:0'),)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +525,7 @@
        "'Artificial intelligence is a new field of research that has been in the works for a while now. It is a field that has been in the works for a while now. It is a field that has been in the works for a while now. It is a'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Artificial intelligence. \"Why doesn\\'t it work?\" \"I\\'m too stupid to know how to do that.\" \"I\\'m not supposed to know how to do that.\" \"I\\'m not supposed to know.\" \"I don\\'t care. I\\'m too dumb'"
+       "'Artificial intelligence (AI) and machine learning techniques have been found in some papers to be useful in predicting people\\'s views of robots and robots and robots. In the early paper on AI researchers pointed out the potential for these techniques to improve on the old \"predict'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,37 +580,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Artificial intelligence (AI) is an emerging field of research and development aimed at improving the quality of life for people living in the developing world.\\n\\nAI is an emerging field of research and development aimed at improving the quality of life for people living in the developing'"
+       "'Artificial intelligence (AI) is becoming more and more popular in the digital age.\\n\\nAccording to a new report by the American Society of Artificial Intelligence (ASI), AI is becoming more and more popular in the digital age. According to a new report by the American Society of Artificial Intelligence (ASI), AI is becoming more and more popular in the digital'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#num_beams : nombre de sequences paralleles maintenues\n",
-    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, num_beams = 5)\n",
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=70, num_beams = 5, do_sample=True)\n",
     "tokenizer.decode(output[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the capital of Australia?\n",
+      "\n",
+      "The capital of Australia is the state capital of Australia. The capital of Australia is the state capital of Australia. The capital of Australia is the state capital of Australia. The capital of Australia is the state capital of Australia. The capital of Australia\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"What is the capital of Australia?\"\n",
+    "input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "output = gpt2.generate(input_ids=input['input_ids'], attention_mask=input['attention_mask'], max_new_tokens=50, num_beams = 5, do_sample=True)\n",
+    "print(tokenizer.decode(output[0]))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "formation_LLM",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
